<resources>
    <string name="app_name">sshimizu-SubBook</string>
    <string name="Send">send_button</string>
    <string name="Delete">delete_button</string>
    <string name="Name">name</string>
    <string name="Charges">$0000.00</string>
    <string name="Date">yyyy-mm-dd</string>
    <string name="Dates">yyyy-mm-dd</string>
    <string name="Comments">Comments:</string>
    <string name="money">$</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
